Fix awful image/iframe display on mobile

--- a/all.css
+++ b/all.css
@@ -381,7 +381,7 @@ article.blog .img-center {
 }
 article.blog img {
     max-height: 500px;
-    max-width: 450px;
+    max-width: 100%;
     margin: 0 auto;
 }
 article.blog table {
